--- a/src/components/weather/weather-page-header/weatherPageHeader.scss
+++ b/src/components/weather/weather-page-header/weatherPageHeader.scss
@@ -47,13 +47,18 @@
 
 
 @media (max-width: 1440px) {
-    .weatherPageHeader-container {
-       
-    }
+    
 }
 
 @media (max-width: 1024px) {
-    
+    .weatherPageHeader-container {
+        justify-content: space-around;
+        padding: 0;
+         img {
+             width: 120px;
+             height: 90px;
+         }
+     }
 }
 
 @media (max-width: 768px) {
@@ -68,7 +73,7 @@
 
 
 //mobile width 100
-@media (max-width: 560px) {
+@media (max-width: 425px) {
     .weatherPageHeader-container {
         padding: 0;
         justify-content: space-around;
