--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,19 @@
 
 .page {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background: $main_background_color;
     display: flex;
+}
 
+@media (max-width: 768px) {
+    .page {
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 425px) {
+    .page {
+        flex-direction: column;
+    }
 }
