--- a/src/components/weather/weather-page-content/weatherPageContent.scss
+++ b/src/components/weather/weather-page-content/weatherPageContent.scss
@@ -102,6 +102,14 @@
                 transform: translate(50%, -20%);
             }
         }
+        .weatherPageContent-container_date,
+        .weatherPageContent-container_time {
+            font-size: 26px;
+            // margin-bottom: 18px;
+            span {
+                font-size: 22px;
+            }
+        }
     }
 }
 
@@ -123,10 +131,10 @@
         }
         .weatherPageContent-container_date,
         .weatherPageContent-container_time {
-            font-size: 30px;
-            margin-bottom: 20px;
+            font-size: 25px;
+            margin-bottom: 18px;
             span {
-                font-size: 25px;
+                font-size: 20px;
             }
         }
     }
