--- a/src/components/search/searchPage.scss
+++ b/src/components/search/searchPage.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     color: white;
     font-size: 32px;
     .searchPage-container-search {
@@ -33,7 +33,7 @@
     }
     .searchPage-container-info {
         width: 100%;
-        height: auto;
+        height: 50%;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
