--- a/src/components/weather/weatherPage.scss
+++ b/src/components/weather/weatherPage.scss
@@ -1,9 +1,10 @@
 
 .weatherPage-container {
     width: 60%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     .weatherPage-container-nextDays {
         display: flex;
         flex-wrap: wrap;
